@@ -26,19 +26,39 @@ public class Main {
         //jika buat harus dibuat dibawah GL.createCapabilities
         //code
 
+//        objects.add(new Object2d(
+//                Arrays.asList(
+//                    new ShaderProgram.ShaderModuleData("resources/shaders/scene.vert",GL_VERTEX_SHADER)
+//                    ,new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag",GL_FRAGMENT_SHADER)
+//                ), new ArrayList<>(
+//                    List.of(
+//                        new Vector3f(0.0f,0.5f,0.0f),
+//                        new Vector3f(-0.5f,-0.5f,0.0f),
+//                        new Vector3f(0.5f,-0.5f,0.0f)
+//                    )
+//                ),
+//                new Vector4f(0.0f,1.0f,1.0f,1.0f)
+//            )
+//        );
+        //with vertices color
         objects.add(new Object2d(
-                Arrays.asList(
-                    new ShaderProgram.ShaderModuleData("resources/shaders/scene.vert",GL_VERTEX_SHADER)
-                    ,new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag",GL_FRAGMENT_SHADER)
-                ), new ArrayList<>(
-                    List.of(
-                        new Vector3f(0.0f,0.5f,0.0f),
-                        new Vector3f(-0.5f,-0.5f,0.0f),
-                        new Vector3f(0.5f,-0.5f,0.0f)
-                    )
-                ),
-                new Vector4f(0.0f,1.0f,1.0f,1.0f)
-            )
+                        Arrays.asList(
+                            new ShaderProgram.ShaderModuleData("resources/shaders/sceneWithVerticesColor.vert",GL_VERTEX_SHADER)
+                            ,new ShaderProgram.ShaderModuleData("resources/shaders/sceneWithVerticesColor.frag",GL_FRAGMENT_SHADER)
+                        ), new ArrayList<>(
+                            List.of(
+                                new Vector3f(0.0f,0.5f,0.0f),
+                                new Vector3f(-0.5f,-0.5f,0.0f),
+                                new Vector3f(0.5f,-0.5f,0.0f)
+                            )
+                        ), new ArrayList<>(
+                                List.of(
+                                        new Vector3f(1.0f,0.0f,0.0f),
+                                        new Vector3f(0.0f,1.0f,0.0f),
+                                        new Vector3f(0.0f,0.0f,1.0f)
+                                )
+                        )
+                )
         );
     }
 
@@ -51,7 +71,7 @@ public class Main {
             //code
             //dibawah createcapabilities
             for(Object2d object:objects){
-                object.draw();
+                object.drawwithVerticesColor();
             }
 
 
